Included token in routes;  Created README.md;  Added token requirement on endpoints;  Adjusted Sequelize import.
